# aurora

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GX.md  LICENSE  README.md
.github/workflows/: build-test.yml  build.yml
cmake/: AuroraCopyRuntimeDLLs.cmake  AuroraDawnProvider.cmake  AuroraDependencyVersions.cmake  AuroraNodProvider.cmake  AuroraSDKExports.cmake  AuroraSDL3Provider.cmake  AuroraTargetPlatform.cmake  PatchZlib.cmake  aurora_card.cmake  aurora_core.cmake  aurora_dvd.cmake  aurora_gd.cmake  aurora_gx.cmake  aurora_main.cmake  aurora_ms.cmake  aurora_mtx.cmake  aurora_os.cmake  aurora_pad.cmake  aurora_si.cmake  aurora_vi.cmake  kabufuda.cmake  thirdparty.cmake
cmake/patches/: apply-rmlui-keyboard-showed-state.cmake  apply-sdl3-android-nintendo-auto-mapping.cmake
docs/: building.md
examples/: CMakeLists.txt  simple.c
include/: Card.hpp  Util.hpp  WideStringConvert.hpp  utf8proc.h
include/aurora/: aurora.h  dl.hpp  dvd.h  event.h  gfx.h  gfx.hpp  gx_dl.hpp  hd_texture.hpp  imgui.h  imgui_config.h  main.h  math.hpp  rmlui.hpp  texture.hpp
include/dolphin/: ar.h  card.h  dolphin.h  dvd.h  gd.h  gx.h  hio2.h  ms.h  mtx.h  os.h  pad.h  ppc_math.h  types.h  vi.h
include/dolphin/gd/: GDAurora.h  GDBase.h  GDGeometry.h  GDLight.h
include/dolphin/gx/: GXAurora.h  GXBump.h  GXCommandList.h  GXCpu2Efb.h  GXDispList.h  GXDraw.h  GXEnum.h  GXExtra.h  GXFifo.h  GXFrameBuffer.h  GXGeometry.h  GXGet.h  GXLighting.h  GXManage.h  GXPixel.h  GXStruct.h  GXTexture.h  GXTransform.h  GXVert.h
include/dolphin/mtx/: GeoTypes.h
include/dolphin/os/: OSAlloc.h  OSContext.h  OSError.h  OSFastCast.h  OSInterrupt.h  OSMessage.h  OSReset.h  OSThread.h  OSTime.h
include/kabufuda/: AsyncIO.hpp  BlockAllocationTable.hpp  Card.hpp  Constants.hpp  Directory.hpp  File.hpp  FileIO.hpp  SRAM.hpp  Util.hpp  WideStringConvert.hpp  winsupport.hpp
lib/: Card.cpp  Util.cpp  WideStringConvert.cpp  aurora.cpp  device.cpp  device.hpp  device_ios.mm  fs_helper.hpp  imgui.cpp  imgui.hpp  imgui_config.cpp  imgui_impl_wgpu.cpp  input.cpp  input.hpp  internal.hpp  logging.cpp  logging.hpp  main.cpp  pad.hpp  phone_haptics.cpp  phone_haptics.hpp  phone_haptics_ios.mm  rmlui.cpp  rmlui.hpp  sqlite_utils.hpp  system_info.cpp  system_info.hpp  system_info_mac.mm  window.cpp  window.hpp  window_macos.mm
lib/card/: BlockAllocationTable.cpp  BlockAllocationTable.hpp  Card.cpp  Card.hpp  CardGciFolder.cpp  CardGciFolder.hpp  CardRawFile.cpp  CardRawFile.hpp  CommonData.h  Constants.hpp  Directory.cpp  Directory.hpp  DolphinCardPath.cpp  DolphinCardPath.hpp  File.cpp  File.hpp  FileIO.cpp  FileIO.hpp  ICard.hpp  SRAM.cpp  SRAM.hpp  Util.cpp  Util.hpp
lib/dawn/: BackendBinding.cpp  BackendBinding.hpp  D3D12Binding.cpp  MetalBinding.mm  NullBinding.cpp  OpenGLBinding.cpp  TracyPlatform.cpp  TracyPlatform.hpp  VulkanBinding.cpp
lib/dolphin/: AR.cpp  GXBump.cpp  GXCull.cpp  GXDispList.cpp  GXDraw.cpp  GXExtra.cpp  GXFifo.cpp  GXFrameBuffer.cpp  GXGeometry.cpp  GXGet.cpp  GXLighting.cpp  GXManage.cpp  GXPerf.cpp  GXPixel.cpp  GXTev.cpp  GXTexture.cpp  GXTransform.cpp  GXVert.cpp  card.cpp  gx.hpp  mtx.c  vi.cpp
lib/dolphin/dvd/: dvd.cpp  dvd.hpp  fst.cpp
lib/dolphin/gd/: GDAurora.cpp  GDBase.cpp  GDGeometry.cpp  GDIndirect.cpp  GDLight.cpp  gd.hpp
lib/dolphin/gx/: GXAurora.cpp  GXBump.cpp  GXCpu2Efb.cpp  GXCull.cpp  GXDispList.cpp  GXDraw.cpp  GXExtra.cpp  GXFifo.cpp  GXFrameBuffer.cpp  GXGeometry.cpp  GXGet.cpp  GXLighting.cpp  GXManage.cpp  GXPerf.cpp  GXPixel.cpp  GXTev.cpp  GXTexture.cpp  GXTransform.cpp  GXVert.cpp  __gx.h  gx.hpp
lib/dolphin/ms/: mouse.cpp
lib/dolphin/mtx/: mtx.c  mtx44.c  mtxstack.c  mtxvec.c  quat.c  vec.c
lib/dolphin/os/: OSAddress.cpp  OSAlloc.cpp  OSArena.cpp  OSBootInfo.cpp  OSInit.cpp  OSMemory.cpp  OSReport.cpp  OSTime.cpp  internal.hpp
lib/dolphin/pad/: pad.cpp
lib/dolphin/si/: si.cpp
lib/dolphin/vi/: vi.cpp  vi_internal.hpp
lib/gfx/: clear.cpp  clear.hpp  command_processor.cpp  command_processor.hpp  common.cpp  common.hpp  dds_io.cpp  dds_io.hpp  depth_peek.cpp  depth_peek.hpp  display_list.cpp  display_list.hpp  fifo.cpp  fifo.hpp  gx.cpp  gx.hpp  gx_fmt.hpp  gx_shader.cpp  pipeline_cache.cpp  pipeline_cache.hpp  png_io.cpp  png_io.hpp  render_worker.cpp  render_worker.hpp  shader_info.cpp  shader_info.hpp  tex_copy_conv.cpp  tex_copy_conv.hpp  tex_palette_conv.cpp  tex_palette_conv.hpp  texture.cpp  texture.hpp  texture_convert.cpp  texture_convert.hpp  texture_format.cpp  texture_replacement.cpp  texture_replacement.hpp
lib/gfx/model/: shader.cpp  shader.hpp
lib/gfx/stream/: shader.cpp  shader.hpp
lib/gx/: attr_fmt.cpp  command_processor.cpp  command_processor.hpp  dl.cpp  fifo.cpp  fifo.hpp  gx.cpp  gx.hpp  gx_fmt.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader_info.cpp  shader_info.hpp
lib/kabufuda/: AsyncIONX.cpp  AsyncIOPosix.cpp  AsyncIOWin32.cpp  BlockAllocationTable.cpp  Card.cpp  Directory.cpp  File.cpp  FileIO.cpp  SRAM.cpp  Util.cpp  WideStringConvert.cpp  winsupport.cpp
lib/rmlui/: FileInterface_SDL.cpp  FileInterface_SDL.h  RmlUi_Backend_Aurora.cpp  RuntimeTextureProvider.cpp  RuntimeTextureProvider.hpp  SystemInterface_Aurora.cpp  SystemInterface_Aurora.h  WebGPURenderInterface.cpp  WebGPURenderInterface.hpp  pipeline.cpp  pipeline.hpp
lib/webgpu/: gpu.cpp  gpu.hpp  gpu_cache.cpp  gpu_prof.cpp  gpu_prof.hpp  wgpu.hpp
sqlite3/: CMakeLists.txt
src/: Card.cpp  SRAM.cpp  Util.cpp  WideStringConvert.cpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  gx_dl_test.cpp  gx_fifo_test.cpp  gx_test_common.hpp  gx_test_stubs.cpp  os_alloc_test.cpp  os_test_globals.cpp  render_worker_test.cpp  test_dvd.cpp
